Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11578

Crash with Segmentation fault in couch_view_group_cleanup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • view-engine
    • Security Level: Public
    • None
    • 3.0.0-888-rel
    • Triaged
    • Centos 64-bit
    • Yes

    Description

      Tests are not failing but cores being dumped on the machines during cleanup.

      http://qa.hq.northscale.net/job/centos_x64--44_04--observe-P0/54/console

      gdb /opt/couchbase/bin/couch_view_group_cleanup core.couch_view_grou.5003
      GNU gdb (GDB) CentOS (7.0.1-45.el5.centos)
      Copyright (C) 2009 Free Software Foundation, Inc.
      License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
      This is free software: you are free to change and redistribute it.
      There is NO WARRANTY, to the extent permitted by law. Type "show copying"
      and "show warranty" for details.
      This GDB was configured as "x86_64-redhat-linux-gnu".
      For bug reporting instructions, please see:
      <http://www.gnu.org/software/gdb/bugs/>...
      Reading symbols from /opt/couchbase/bin/couch_view_group_cleanup...done.

      warning: core file may not match specified executable file.
      [New Thread 5003]
      [New Thread 5004]
      Reading symbols from /opt/couchbase/bin/../lib/libcouchstore.so...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libcouchstore.so
      Reading symbols from /opt/couchbase/bin/../lib/libv8.so...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libv8.so
      Reading symbols from /opt/couchbase/bin/../lib/libicui18n.so.44...(no debugging symbols found)...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libicui18n.so.44
      Reading symbols from /opt/couchbase/bin/../lib/libicuuc.so.44...(no debugging symbols found)...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libicuuc.so.44
      Reading symbols from /opt/couchbase/bin/../lib/libicudata.so.44...(no debugging symbols found)...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libicudata.so.44
      Reading symbols from /opt/couchbase/bin/../lib/libsnappy.so.1...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libsnappy.so.1
      Reading symbols from /opt/couchbase/bin/../lib/libplatform.so.0.1.0...done.
      Loaded symbols for /opt/couchbase/bin/../lib/libplatform.so.0.1.0
      Reading symbols from /lib64/libpthread.so.0...(no debugging symbols found)...done.
      [Thread debugging using libthread_db enabled]
      Loaded symbols for /lib64/libpthread.so.0
      Reading symbols from /lib64/libdl.so.2...(no debugging symbols found)...done.
      Loaded symbols for /lib64/libdl.so.2
      Reading symbols from /lib64/librt.so.1...(no debugging symbols found)...done.
      Loaded symbols for /lib64/librt.so.1
      Reading symbols from /lib64/libc.so.6...(no debugging symbols found)...done.
      Loaded symbols for /lib64/libc.so.6
      Reading symbols from /usr/lib64/libstdc++.so.6...(no debugging symbols found)...done.
      Loaded symbols for /usr/lib64/libstdc++.so.6
      Reading symbols from /lib64/libm.so.6...(no debugging symbols found)...done.
      Loaded symbols for /lib64/libm.so.6
      Reading symbols from /lib64/libgcc_s.so.1...(no debugging symbols found)...done.
      Loaded symbols for /lib64/libgcc_s.so.1
      Reading symbols from /lib64/ld-linux-x86-64.so.2...(no debugging symbols found)...done.
      Loaded symbols for /lib64/ld-linux-x86-64.so.2

      warning: no loadable sections found in added symbol-file system-supplied DSO at 0x7fffd1321000
      Core was generated by `/opt/couchbase/bin/couch_view_group_cleanup'.
      Program terminated with signal 11, Segmentation fault.
      #0 0x0000003ea2833427 in exit () from /lib64/libc.so.6
      (gdb) t a a bt

      Thread 2 (Thread 5004):
      #0 0x0000003ea28c6c2b in write () from /lib64/libc.so.6
      #1 0x0000003ea286bc23 in _IO_new_file_write () from /lib64/libc.so.6
      #2 0x0000003ea286bb36 in _IO_new_do_write () from /lib64/libc.so.6
      #3 0x0000003ea286dbf4 in _IO_flush_all_lockp () from /lib64/libc.so.6
      #4 0x0000003ea286e745 in _IO_cleanup () from /lib64/libc.so.6
      #5 0x0000003ea28334b2 in exit () from /lib64/libc.so.6
      #6 0x0000000000400ddb in exit_thread_helper (args=<value optimized out>) at /buildbot/build_slave/centos-5-x64-300-builder/build/build/couchstore/src/views/bin/util.c:38
      #7 0x00002af385f64bff in platform_thread_wrap (arg=<value optimized out>) at /buildbot/build_slave/centos-5-x64-300-builder/build/build/platform/src/cb_pthreads.c:19
      #8 0x0000003ea300677d in start_thread () from /lib64/libpthread.so.0
      #9 0x0000003ea28d49ad in clone () from /lib64/libc.so.6

      Thread 1 (Thread 0x2af386174e00 (LWP 5003)):
      #0 0x0000003ea2833427 in exit () from /lib64/libc.so.6
      #1 0x0000003ea281d99b in __libc_start_main () from /lib64/libc.so.6
      #2 0x0000000000400aa9 in _start ()
      (gdb)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Meenakshi Meenakshi Goel
            Meenakshi Meenakshi Goel
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty